--- a/templates/index.html
+++ b/templates/index.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload</title>
+    <title>Homepage</title>
 </head>
 <body>
-    <?php
-    $filename = $_FILES['file']['name'];
-
-    $location = "upload/".$filename;
-
-    echo "It works"
-
-    ?>
+    Index HTML working
 </body>
 </html>
