--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <div>Menu</div>
  </header>
  <form action="" method="post">
-
+    <input type="file" name="file" id="uploaded_video">
+    <input type="submit" value="submit">
  </form>
 {% endblock%}
