drop zone addition

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,11 @@
 {% extends "base.html" %}
 {% block title %}Home Page{% endblock%}
 {% block content %}
-<header>
-    <div>Logo</div>
-    <div>Menu</div>
- </header>
  <form action="" method="post">
-    <input type="file" name="file" id="uploaded_video">
+    <div class="drop-zone">
+        <span class="drop-zone_prompt">Drop file here or click to upload</span>
+    </div>
+    <input type="file" name="file" id="uploaded_video" class="drop-zone__input">
     <input type="submit" value="submit">
  </form>
 {% endblock%}
