--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,15 @@
 {% extends "base.html" %}
 {% block title %}Home Page{% endblock%}
 {% block content %}
- <form action="" method="post">
+<!--<form action="" method="post">
     <div class="drop-zone">
         <span class="drop-zone_prompt">Drop file here or click to upload</span>
     </div>
     <input type="file" name="file" id="uploaded_video" class="drop-zone__input">
     <input type="submit" value="submit">
- </form>
+ </form>--> 
+ <div class="drop-zone">
+    <span class="drop-zone__prompt">Drop file here or click to upload</span>
+    <input type="file" name="myFile" class="drop-zone__input">
+  </div>
 {% endblock%}
