--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,13 @@
     <div class="container">
         <header>
             <div>Logo</div>
-            <div>Menu</div>
+            <div>
+                <ul class="menu_bar">
+                    <li>About</li>
+                    <li>Contact</li>
+                    <li>Another</li>
+                </ul>
+            </div>
          </header>
          <!--This is where other pages add their data-->
         {% block content %}{% endblock %}
