--- a/static/main.css
+++ b/static/main.css
@@ -2,13 +2,18 @@ body{
     background-color: black;
 }
 .container{
-    width: 80%;
-    height: 80%;
     background-color: gainsboro;
+    margin: 10%;
+    height: 80%;
 }
 header{
     display: flex;
     justify-content: space-between;
+    padding: 30px;
+}
+.menu_bar{
+    display: flex;
+    justify-content: space-evenly;
 }
 .drop-zone {
     max-width: 200px;
