--- a/templates/base.html
+++ b/templates/base.html
@@ -12,15 +12,13 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    <div class="container">
+    <div id="container">
         <header>
             <div>Logo</div>
-            <div>
-                <ul class="menu_bar">
-                    <li>About</li>
-                    <li>Contact</li>
-                    <li>Another</li>
-                </ul>
+            <div id="menu_bar">
+                <div>About</div>
+                <div>Contact</div>
+                <div>another</div>
             </div>
          </header>
          <!--This is where other pages add their data-->
