--- a/templates/base.html
+++ b/templates/base.html
@@ -12,10 +12,10 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    <div id="container">
+    <div class="container">
         <header>
             <div>Logo</div>
-            <div id="menu_bar">
+            <div class="menu_bar">
                 <div>About</div>
                 <div>Contact</div>
                 <div>another</div>
