--- a/static/main.css
+++ b/static/main.css
@@ -7,12 +7,8 @@ header{
     justify-content: space-between;
     padding: 30px;
 }
-#container{
-    background-color: gainsboro !important;
-    margin: 10%;
-    height: 80%;
-}
-#menu_bar{
+
+#menubar{
     display: flex;
     justify-content: space-evenly;
 }
