--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container-xl">
         <header>
             <div>Logo</div>
             <div class="menu_bar">
