--- a/static/main.css
+++ b/static/main.css
@@ -1,7 +1,10 @@
 html{
     background-color: black;
 }
-
+body{
+    width: 70%;
+    height: auto;
+}
 header{
     display: flex;
     justify-content: space-between;
@@ -10,7 +13,7 @@ header{
 body{
     width: 80%;
 }
-#menubar{
+.menubar{
     display: flex;
     justify-content: space-evenly;
 }
