--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <div class="container-xl">
         <header>
             <div>Logo</div>
-            <div class="menu_bar">
+            <div class="menubar">
                 <div>About</div>
                 <div>Contact</div>
                 <div>another</div>
