--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}Home Page{% endblock%}
 {% block content %}
 
- <div>
+ <div class="d-flex justify-content-between p-4">
  <div>I have text written.</div>
  <form action="" method="post">
     <div class="drop-zone">
