css updated for back image

--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,6 @@
 html{
     background-color: black;
-    background-image: url(D)
+    background-image: url(background-desktop.png);
   display: flex;
   justify-content: center;
   align-items: center;
