added links to basehtml

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,9 @@
         <header>
             <div>Logo</div>
             <div class="menubar">
-                <div>About</div>
-                <div>Contact</div>
-                <div>another</div>
+                <div> <a href="about.html">About</a> </div>
+                <div> <a href="contact.html">Contact</a> </div>
+                <div> <a href="contact.html">another</a> </div>
             </div>
          </header>
          <!--This is where other pages add their data-->
