--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,22 @@
 
  <div class="d-flex justify-content-between p-4">
  <div>I have text written.</div>
- <form action="" method="post">
-    <div class="drop-zone">
-        <span class="drop-zone_prompt">Drop file here or click to upload</span>
-    </div>
-    <input type="file" name="file" id="uploaded_video" class="drop-zone__input">
-    <input type="submit" value="submit">
- </form>
+    <form action="/upload_video" method="POST" enctype="multipart/form-data">
+        <div class="form-group">
+        <!--<div class="drop-zone">
+            <span class="drop-zone_prompt">Drop file here or click to upload</span>
+        </div>
+        <input type="file" name="file" id="uploaded_video" class="drop-zone__input">
+        <input type="submit" value="submit">
+        -->
+            <label>Select Video</label>
+            <div class="custom-file">
+                <input type="file" name="video" id="video" class="custom-file-input">
+                <label for="video" class="custom-file-label">Select Video</label>
+            </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Upload Video</button>
+    </form>
 </div>
 
 {% endblock%}
