--- a/static/main.css
+++ b/static/main.css
@@ -1,9 +1,13 @@
 html{
-    background-color: black;
-    background-image: url(background-desktop.png);
+  background-color: black;
+  background-image: url(background-desktop.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100%;
 }
 header{
     display: flex;
