--- a/static/main.css
+++ b/static/main.css
@@ -76,4 +76,12 @@ body{
     font-size: 14px;
     text-align: center;
   }
-  
+  .qompose{
+    position: fixed;
+    right: 0px; bottom: 0px;
+    width: 200px;
+    height:40px;
+    background-color:lightblue;
+    padding: 5px;
+    color: whitesmoke;
+  }
