--- a/templates/base.html
+++ b/templates/base.html
@@ -16,15 +16,17 @@
         <header>
             <div>Logo</div>
             <div class="menubar">
-                <div> <a href="about">About</a> </div>
-                <div> <a href="contact">Contact</a> </div>
-                <div> <a href="contact">another</a> </div>
+                <div> <a href="{% url_for('about' %}">About</a> </div>
+                <div> <a href="{% url_for('contact' %}">Contact</a> </div>
+                <div> <a href="{% url_for('contact' %}">another</a> </div>
             </div>
          </header>
          <!--This is where other pages add their data-->
         {% block content %}{% endblock %}
     </div>
-
+    <div class="qompose">
+        Qompose.AI
+    </div>
 </body>
 <script src="../static/main.js"></script>
 </html>
