--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,9 @@
         <header>
             <div>Logo</div>
             <div class="menubar">
-                <div> <a href="">About</a> </div>
-                <div> <a href="">Contact</a> </div>
-                <div> <a href="">another</a> </div>
+                <div> <a href="{{url_for('about'}}">About</a> </div>
+                <div> <a href="{{url_for('contact'}}">Contact</a> </div>
+                <div> <a href="{{url_for('about'}}">another</a> </div>
             </div>
          </header>
          <!--This is where other pages add their data-->
