--- a/static/main.css
+++ b/static/main.css
@@ -88,3 +88,13 @@ body{
     font-weight: 900;
     font-size: 15px;
   }
+  .dropzone {
+    box-shadow: 0px 2px 20px 0px #f2f2f2;
+    border: 1px dashed #c0ccda;
+    padding: 60x;
+    border-radius: 10px;
+    background-color: #fbfdff;
+    margin-left: 15px;
+    margin-bottom: 15px;
+    margin-top: 15px;
+  }
