--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,9 @@
             <header>
                 <div>Logo</div>
                 <div class="menubar">
-                    <div> <a href="">About</a> </div>
-                    <div> <a href="">Contact</a> </div>
-                    <div> <a href="">another</a> </div>
+                    <div> <href="{{ url_for('about') }}">About</a> </div>
+                    <div> <href="{{ url_for('about') }}">Contact</a> </div>
+                    <div> <href="{{ url_for('about') }}">another</a> </div>
                 </div>
              </header>
         </div>
