--- a/templates/base.html
+++ b/templates/base.html
@@ -19,8 +19,8 @@
                 <div>Logo</div>
                 <div class="menubar">
                     <div> <a href="{{ url_for('about') }}">About</a> </div>
-                    <div> <a href="{{ url_for('about') }}">Contact</a> </div>
-                    <div> <a href="{{ url_for('about') }}">another</a> </div>
+                    <div> <a href="{{ url_for('contact') }}">Contact</a> </div>
+                    <div> <a href="https://github.com/QomposeAI/hackathon.github.io">Github</a> </div>
                 </div>
              </header>
         </div>
