--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,9 @@
             <header>
                 <div>Logo</div>
                 <div class="menubar">
-                    <div> <a href="{{ url_for('about') }}">About</a> </div>
-                    <div> <a href="{{ url_for('contact') }}">Contact</a> </div>
-                    <div> <a href="https://github.com/QomposeAI/hackathon.github.io">Github</a> </div>
+                    <div> <a href="{{ url_for('about') }}" class="link-dark">About</a> </div>
+                    <div> <a href="{{ url_for('contact') }}" class="link-dark">Contact</a> </div>
+                    <div> <a href="https://github.com/QomposeAI/hackathon.github.io" class="link-dark">Github</a> </div>
                 </div>
              </header>
         </div>
