--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,10 @@
         
 
     <div class="d-flex justify-content-between p-4">
-        <div>I have text written.</div>
+        <div>
+            <h1>Generate markers for filler words, repetitions and unnecessary pauses in your video speech recordings.</h1>
+            <h2>uses latest Deep Learning algorithms detects, markers compatible with  your favorite video editing software. Preview video download for premiere Davinci. Our demo model currently is english only.</h2>
+        </div>
         <!--    <form action="/upload_video" method="POST" enctype="multipart/form-data">
             <div class="form-group">
             <div class="drop-zone">
