--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,9 @@
         
 
     <div class="d-flex justify-content-between p-4">
-        <div>
+        <div class=""index-text>
             <h1>Generate markers for filler words, repetitions and unnecessary pauses in your video speech recordings.</h1>
-            <h2>uses latest Deep Learning algorithms detects, markers compatible with  your favorite video editing software. Preview video download for premiere Davinci. Our demo model currently is english only.</h2>
+            <p>uses latest Deep Learning algorithms detects, markers compatible with  your favorite video editing software. Preview video download for premiere Davinci. Our demo model currently is english only.</p>
         </div>
         <!--    <form action="/upload_video" method="POST" enctype="multipart/form-data">
             <div class="form-group">
