--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 {% block content %}
         
 
-    <div class="d-flex justify-content-between p-4">
+    <div class="d-flex justify-content-between p-4 main-div">
         <div class="index-text">
             <h1>Generate markers for filler words, repetitions and unnecessary pauses in your video speech recordings.</h1>
             <p>uses latest Deep Learning algorithms detects, markers compatible with  your favorite video editing software. Preview video download for premiere Davinci. Our demo model currently is english only.</p>
