--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,9 @@
             <header>
                 <div>Logo</div>
                 <div class="menubar">
-                    <div> <a href="{{ url_for('about') }}" class="link-dark">about</a> </div>
-                    <div> <a href="{{ url_for('contact') }}" class="link-dark">contact</a> </div>
-                    <div> <a href="https://github.com/QomposeAI/hackathon.github.io" class="link-dark">github</a> </div>
+                    <div> <a href="{{ url_for('about') }}" class="link-light">about</a> </div>
+                    <div> <a href="{{ url_for('contact') }}" class="link-light">contact</a> </div>
+                    <div> <a href="https://github.com/QomposeAI/hackathon.github.io" class="link-light">github</a> </div>
                 </div>
              </header>
         </div>
