--- a/static/main.css
+++ b/static/main.css
@@ -9,6 +9,25 @@ html{
   align-items: center;
   height: 100%;
 }
+.logo{
+  width: 121px;
+height: 29px;
+left: 233px;
+top: 185px;
+font-family: 'Inter';
+font-style: normal;
+font-weight: 100;
+font-size: 24px;
+line-height: 29px;
+/* identical to box height */
+background: linear-gradient(270.29deg, #FFFFFF -32.09%, rgba(255, 255, 255, 0) 124.62%);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+background-clip: text;
+text-fill-color: transparent;
+
+text-shadow: 0px 0px 0px #FFA087;
+}
 header{
     display: flex;
     justify-content: space-between;
