--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     <div class="container-xl">
         <div>
             <header>
-                <div><img src="../static/speechifire.png" alt="logo"></div>
+                <div><img src="../static/logo.jpeg" alt="logo"></div>
                 <div class="menubar">
                     <div> <a href="{{ url_for('about') }}" class="link-light">about</a> </div>
                     <div> <a href="{{ url_for('contact') }}" class="link-light">contact</a> </div>
