--- a/templates/player.html
+++ b/templates/player.html
@@ -7,22 +7,119 @@
         <h1>Our Algorithm detected 200 seconds of video containing 50 filler words.</h1>
     </div>
 
-    <div class="container">
-        <div id="video-player"></div>
+    <div class="container" style="background: white; border-radius: 5px;">
+        <div class="video-player" id="videoContainer">
+            <video id="video" preload="metadata" autoplay loop width="560" height="315" src="../static/uploads/demogecko.mp4"
+                class="video"></video>
+                <div id="video-controls" class="controls" data-state="hidden">
+                    <button id="playpause" type="button" data-state="play">Play/Pause</button>
+                    <button id="stop" type="button" data-state="stop">Stop</button>
+                    <div class="progress">
+                        <progress id="progress" value="0" min="0">
+                            <span id="progress-bar"></span>
+                        </progress>
+                    </div>
+                    <button id="mute" type="button" data-state="mute">Mute/Unmute</button>
+                    <button id="volinc" type="button" data-state="volup">Vol+</button>
+                    <button id="voldec" type="button" data-state="voldown">Vol-</button>
+                    <button id="fs" type="button" data-state="go-fullscreen">Fullscreen</button>
+                </div>
+                <img src="../static/uploads/markers.jpg" alt="markers">
+                <img src="../static/spec-img.png" alt="spec" style="width: 100%;">
+
+             
+        </div>
+
     </div>
 </div>
 </div>
 
-
-<script src="https://muse.ai/static/js/embed-player.min.js"></script>
 <script>
-    const player = MusePlayer({
-        container: document.getElementById('video-player'),
-        video: 'c41FczZ',
-        autoplay: true,
-        loop: true,
-        volume: 0,
-        sizing: 'fit',
-    });
+    // Display the user defined video controls
+    (function () {
+	'use strict';
+
+	// Does the browser actually support the video element?
+	var supportsVideo = !!document.createElement('video').canPlayType;
+
+	if (supportsVideo) {
+		// Obtain handles to main elements
+		var videoContainer = document.getElementById('videoContainer');
+		var video = document.getElementById('video');
+		var videoControls = document.getElementById('video-controls');
+
+		// Hide the default controls
+		video.controls = false;
+
+		// Display the user defined video controls
+		videoControls.setAttribute('data-state', 'visible');
+
+		// Obtain handles to buttons and other elements
+		var playpause = document.getElementById('playpause');
+		var progress = document.getElementById('progress');
+		var progressBar = document.getElementById('progress-bar');
+
+		// If the browser doesn't support the progress element, set its state for some different styling
+		var supportsProgress = (document.createElement('progress').max !== undefined);
+		if (!supportsProgress) progress.setAttribute('data-state', 'fake');
+
+
+		// Only add the events if addEventListener is supported (IE8 and less don't support it, but that will use Flash anyway)
+		if (document.addEventListener) {
+			// Wait for the video's meta data to be loaded, then set the progress bar's max value to the duration of the video
+			video.addEventListener('loadedmetadata', function() {
+				progress.setAttribute('max', video.duration);
+			});
+
+			// Changes the button state of certain button's so the correct visuals can be displayed with CSS
+			var changeButtonState = function(type) {
+				// Play/Pause button
+				if (type == 'playpause') {
+					if (video.paused || video.ended) {
+						playpause.setAttribute('data-state', 'play');
+					}
+					else {
+						playpause.setAttribute('data-state', 'pause');
+					}
+				}
+			}
+
+			// Add event listeners for video specific events
+			video.addEventListener('play', function() {
+				changeButtonState('playpause');
+			}, false);
+			video.addEventListener('pause', function() {
+				changeButtonState('playpause');
+			}, false);
+
+
+			// Add events for all buttons			
+			playpause.addEventListener('click', function(e) {
+				if (video.paused || video.ended) video.play();
+				else video.pause();
+			});			
+
+
+			// As the video is playing, update the progress bar
+			video.addEventListener('timeupdate', function() {
+				// For mobile browsers, ensure that the progress element's max attribute is set
+				if (!progress.getAttribute('max')) progress.setAttribute('max', video.duration);
+				progress.value = video.currentTime;
+				progressBar.style.width = Math.floor((video.currentTime / video.duration) * 100) + '%';
+			});
+
+			// React to the user clicking within the progress bar
+			progress.addEventListener('click', function(e) {
+				//var pos = (e.pageX  - this.offsetLeft) / this.offsetWidth; // Also need to take the parent into account here as .controls now has position:relative
+				var pos = (e.pageX  - (this.offsetLeft + this.offsetParent.offsetLeft)) / this.offsetWidth;
+				video.currentTime = pos * video.duration;
+			});
+
+
+		}
+	 }
+
+ })();
+
 </script>
 {%endblock%}
