--- a/templates/player.html
+++ b/templates/player.html
@@ -4,8 +4,9 @@
 
 <div class="d-flex justify-content-between p-4 main-div">
     <div class="video-text">
-        <h1>Our Algorithm detected 200 seconds of video containing 50 filler words.</h1>
-    </div>
+        <h1>Our AI algorithm detected 6 seconds of silence, 4 fillers and 3 repetitions.</h1>
+		<a id="download" href="../static/extracted_timings.csv" download="../static/uploads/extracted_timings.csv"><img src="../static/uploads/Button.png" alt="" srcset=""></a>
+	</div>
 
     <div class="container" style="background: white; border-radius: 5px;">
         <div class="video-player" id="videoContainer">
