updated main.css for backg

--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,6 @@
 html {
   background-color: black;
-  background-image: url(background-desktop.png);
+  background-image: url(background-desktop.jpeg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
