--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block customscripts %}{% endblock %}
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -24,10 +25,9 @@
     <div class="container-xl">
         <div>
             <header>
-                <div class="logo">speechifire</div>
+                <div class="logo"><img src="../static/logo.png" alt="speechifire" srcset=""></div>
                 <div class="menubar">
                     <div> <a href="{{ url_for('about') }}" class="link-light">about</a> </div>
-                    <div> <a href="{{ url_for('contact') }}" class="link-light">contact</a> </div>
                     <div> <a href="https://github.com/QomposeAI/hackathon.github.io" class="link-light">github</a>
                     </div>
                 </div>
